opensesame (3.0.7a1-ubuntu1) wily; urgency=medium

  * Bugs fixed
    - Fix 'sound' duration in sampler and sketchpad (#401)
  * Improvements

 -- Sebastiaan Mathot <sebastiaan@mantis>  Fri, 26 Feb 2016 16:28:33 +0100

opensesame (3.0.6-ubuntu2) wily; urgency=medium

  * Bugs fixed
    - Fix a crash when adding an empty list to the file pool
    - Handle exotic variable types better in variable inspector (#388)
    - Fix initial state of auto_example plug-in (#389)
    - Catch errors in file pool
    - Fix background-color changes with psycho backend
    - Catch non osexception Exceptions during script validation
    - Add console property to sketchpad base_element
    - Avoid setting config values to QPyNullVariant (#397)
    - Don't set fullscreen as property of experiment in opensesamerun (#392)
    - Re-implement item.eval_text() for backward compatibility (#398)
  * Improvements
    - Add `experiment_file` experimental variable, which contains the file name of the experiment (#387)
    - Catch warnings when creating a new item and provide an informative message
    - Update default logfile location after save as (#370)
    - Improve file-type icons in file pool
    - Add deprecation warning to parallel plugin (use coroutines instead)
    - Allow external links in user hints
    - Move image element to top in sketchpad to make it more easily discoverable

 -- Sebastiaan Mathot <sebastiaan@mantis>  Thu, 21 Jan 2016 20:55:07 +0100

opensesame (3.0.5-ubuntu1) wily; urgency=medium

  * Bugs fixed
    - Fix catching of unexpected errors in multiprocess runner (#382)
    - Don't crash when entering numeric break-if statement in loop
    - Register 'self' when executing conditional statements (for backwards compatibility)
    - Fix missing py3compat import in joystick
    - Fix keyboard timestamps for older versions of PsychoPy (#381)
    - Show .osexp files while browsing with opensesamerun GUI (#385)
    - Fix rectangular envelope in noise patches